<resources>
    <string name="app_name">Howzit</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">Your ID</string>
    <string name="back4app_client_key">Your ID</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for Login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="login">Log in</string>
    <string name="forgot_password">forgot password</string>
    <string name="Sign_up_msg">Sign_up_msg</string>

    <!-- Strings used for Errors -->
    <string name="menu_logout">Log Out</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">Please enter a username</string>
    <string name="error_blank_password">Please enter a password</string>
    <string name="error_mismatched_passwords">Please enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging in&#8230;</string>
    <string name="progress_sign_up">Signing up&#8230;</string>

    <string name="progressDialog">Loading&#8230;</string>

    <!-- Strings used for Post-->
    <string name="cancel">Cancel</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="prompt_post">Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="post_out_of_range">Can\'t view post! Out of range , Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>


    <string name="action_settings">Settings</string>
    <string name="rules_header">header</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search_distance">Search Distance</string>
    <string name="comments">comments</string>
    <string name="comment">comment</string>
    <string name="settings_distance_format">%d Km</string>
    <string name="Nothing">empty</string>
    <string name="title_activity_main3">MainActivity3</string>

    <!--ts1-->
    <string name="button_login_with_facebook">Login with facebook</string>
    <string name="button_login_with_google">Login with google</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>

    <!--test-->

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in 2</string>
    <string name="title_activity_login3">Sign in 3</string>
    <string name="hint">Username</string>
    <string name="password">password</string>
    <string name="user">user</string>
    <string name="username">Username</string>
    <string name="sign_in_text_on_registration_activity">Sign in text on registration activity</string>
    <string name="logo">Logo</string>
    <string name="forgot_your_login_details">Forgot your login details ?</string>
    <string name="sign_up">Sign UP</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here_to_log_in">click here to log in.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="vote_up">Vote Up</string>
    <string name="vote_down">Vote Down</string>
    n

</resources>