<?xml version="1.0" encoding="utf-8"?>
    <com.google.android.material.appbar.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"
            android:src="@drawable/ic_hardware_keyboard_backspace"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="13dp"
            android:background="?android:selectableItemBackground"/>
        <TextView
            android:id="@+id/txtCreatePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnCancel"
            android:layout_toEndOf="@+id/btnCancel"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:text="@string/activity_post_title"
            android:textColor="@color/textColorPrimary"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txtCharacter_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnPost"
            android:layout_toStartOf="@+id/btnPost"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/character_count_placeholder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/btnPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/prompt_post"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackground"/>
    </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

