<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ts_radial_gradient_bkg"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            >

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:src="@drawable/mascot_icon"
                    android:textColor="#fff"
                    android:textSize="40sp"
                    android:gravity="center_vertical|center_horizontal"
                    android:contentDescription="@string/logo" />

                <ImageView
                    android:id="@+id/ivSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/sign_in_text_on_registration_activity"
                    android:src="@drawable/sign_in" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/blue_leftcorner_bkg">


                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#6abcec" />


                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#6abcec" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:gravity="center_vertical|center_horizontal">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/password"
                                android:scaleType="fitCenter"
                                android:contentDescription="@string/password" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#6abcec" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:gravity="center_vertical|center_horizontal">
                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/password"
                                android:scaleType="fitCenter"
                                android:contentDescription="@string/password" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/white_rightcorner_bkg">



                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#979797" />



                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#979797" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="60dp">
                            <EditText
                                android:id="@+id/txtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:ems="10"
                                android:hint="@string/prompt_password"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:textSize="16sp"
                                android:inputType="textPassword"
                                android:background="@android:color/transparent"
                                android:autofillHints="" />
                        </LinearLayout>


                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="#979797" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="60dp">

                            <EditText
                                android:id="@+id/txtPassword_Again"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:hint="@string/prompt_password_again"
                                android:imeActionId="@+id/edittext_action_signup"
                                android:imeActionLabel="@string/signup"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:textSize="16sp"
                                android:autofillHints="" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnreset"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:text="Reset"
                    android:textStyle="bold"
                    android:background="@drawable/blue_btn_bkg"
                    android:textColor="#fff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textColor="#80ffffff"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/click_here_to_log_in"
                        android:textColor="#ffffff"
                        android:padding="5dp"
                        android:clickable="true"
                        android:textSize="12sp"
                        android:focusable="true" />


                </LinearLayout>


            </LinearLayout>



        </LinearLayout>


    </ScrollView>

</RelativeLayout>

